--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^6.7.1",
     "vue": "^3.2.37",
     "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
     "vuex": "^4.0.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
